--- a/nerdle.html
+++ b/nerdle.html
@@ -7,13 +7,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <title>Nerdle</title>
+    <title>Hackle</title>
 </head>
 
 <body>
     <div id="header">
         <div id="main-title">
-            <h1 id="title">Nerdle</h1>
+            <h1 id="title">Hackle</h1>
         </div>
     </div>
     <section id="game-section">
